Fix slight overflow on mobile on conversions.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ input[type=number] {
     #tap_temp,
     #heated_temp,
     #aquarium_temp    
-      {width: 67px;}    
+      {width: 57.5px;}    
 }
 
 /* Table Responsive */
